# pulse-sdk

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.ko.md  README.md  idf_component.yml  pulse-sdk.cmake  pulse-sdk.mk  pulse.cmake  pulse.mk
.github/workflows/: ci.yml
examples/baremetal/: Makefile
examples/baremetal/src/: main.c  syscalls.c
examples/esp-idf/: CMakeLists.txt  sdkconfig.defaults
examples/esp-idf/main/: CMakeLists.txt  main.c
examples/generic-cmake/: CMakeLists.txt
examples/generic-cmake/src/: main.c
examples/linux/: CMakeLists.txt  main.c
examples/zephyr/app/: CMakeLists.txt  prj.conf  prj_coaps.conf  prj_https.conf  west.yml
examples/zephyr/app/boards/: native_sim.conf
examples/zephyr/app/include/: metrics.def
examples/zephyr/app/src/: main.c
include/pulse/: pulse.h  pulse_internal.h  pulse_overrides.h  version.h
ports/: pulse_metricfs_stub.c
ports/baremetal/: pulse_overrides.c  pulse_transport_coaps.c  pulse_transport_https.c
ports/esp-idf/: Kconfig  pulse_overrides.c  pulse_transport_coaps.c  pulse_transport_https.c
ports/linux/: pulse_overrides.c  pulse_transport_coaps.c  pulse_transport_https.c
ports/zephyr/: pulse_overrides.c  pulse_transport_coaps.c  pulse_transport_https.c
src/: pulse.c  pulse_codec.c  pulse_codec.h  pulse_metrics_cbor_encoder.c
tests/integration/: run_fixture.cmake
tests/integration/default-consumer/: CMakeLists.txt  main.c
tests/integration/preexisting-deps-consumer/: CMakeLists.txt  main.c  metrics.def
tests/mocks/: coap_mock.cpp  curl_mock.cpp  esp_crt_bundle.h  esp_http_client.h  esp_http_client_mock.cpp  esp_timer.h  esp_timer_mock.cpp  mbedtls_sha256_mock.cpp  openssl_mock.cpp  psa_crypto_mock.cpp  zephyr_coap_mock.cpp  zephyr_mock.cpp
tests/mocks/coap3/: coap.h
tests/mocks/curl/: curl.h
tests/mocks/mbedtls/: sha256.h  version.h
tests/mocks/openssl/: sha.h  ssl.h
tests/mocks/psa/: crypto.h
tests/mocks/zephyr/: kernel.h
tests/mocks/zephyr/net/: coap.h  socket.h  tls_credentials.h
tests/mocks/zephyr/net/http/: client.h
tests/mocks/zephyr/posix/sys/: time.h
tests/runners/: pulse_report.mk  pulse_transport_coaps_esp_idf.mk  pulse_transport_coaps_linux.mk  pulse_transport_coaps_zephyr.mk  pulse_transport_https_esp_idf.mk  pulse_transport_https_linux.mk  pulse_transport_https_zephyr.mk
tests/src/: pulse_codec_test.cpp  pulse_report_test.cpp  pulse_transport_coaps_esp_idf_test.cpp  pulse_transport_coaps_linux_test.cpp  pulse_transport_coaps_zephyr_test.cpp  pulse_transport_https_esp_idf_test.cpp  pulse_transport_https_linux_test.cpp  pulse_transport_https_zephyr_test.cpp
tests/stubs/: assert_stub.c  metricfs_stub.c  metricfs_stub.h
zephyr/: CMakeLists.txt  Kconfig
